[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-nzbn"
version = "0.1.0"
description = "MCP server for the New Zealand Business Number (NZBN) API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
]

[project.scripts]
mcp-nzbn = "mcp_nzbn:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_nzbn"]
