[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-mbie"
version = "0.1.0"
description = "MCP server for MBIE business register APIs (NZBN and Companies Office)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
]

[project.scripts]
mcp-mbie = "mcp_mbie:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_mbie"]
